// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconZoomOut /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconZoomOut /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconZoomOut /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconZoomOut /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconZoomOut /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconZoomOut /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconZoomOut /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconZoomOut /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconZoomOut /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconZoomOut /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconZoomOut /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconZoomOut /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M165.6 153.6c7.8-10.8 12.5-24.1 12.5-38.5 0-36.3-29.5-65.8-65.7-65.8s-65.7 29.5-65.7 65.8 29.5 65.8 65.7 65.8c14.7 0 28.3-4.9 39.3-13.1l51.6 51.6 14.1-14.1-51.8-51.7zm-18-33.6h-72v-16h72v16z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconZoomOut /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
